# gq

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bugexample.gq  bugexample.json  docker-compose.yml  example.gq  example.json  example.yml  file.json  justfile  output.json  package-lock.json  small_example.json
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  main.rs  output.rs
crates/cli/src/args/: indentation.rs  input_data.rs  input_query.rs  output.rs  output_args.rs  output_format.rs
crates/cli/src/args/output/: output_format.rs
crates/cli/src/args/output_args/: output_format.rs
crates/core/: Cargo.toml
crates/core/src/: data.rs  data_type.rs  format.rs  lexer.rs  lib.rs  lsp.rs  parser.rs  query.rs  value.rs  value_type.rs
crates/core/src/data/: format.rs
crates/core/src/format/: value.rs
crates/core/src/lsp/: completion_item.rs
crates/core/src/query/: apply.rs  context.rs  error.rs  format.rs  query_argument.rs  query_arguments.rs  query_key.rs  query_operator.rs  query_operators.rs
crates/core/tests/: integration_tests.rs
crates/core/tests/array_filtering/: equal.rs  greater.rs  greater_equal.rs  less.rs  less_equal.rs  match.rs  mod.rs  not_equal.rs  not_match.rs
crates/core/tests/field_accessing/: mod.rs
crates/core/tests/field_aliasing/: mod.rs
crates/core/tests/fixtures/: mod.rs
crates/core/tests/operator/: indexing.rs
crates/core/tests/other/: mod.rs
crates/core/tests/property_accessing/: mod.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: completion_item.rs  completions.rs  lib.rs  main.rs  patch.rs
crates/python/: Cargo.toml  justfile  pyproject.toml
crates/python/src/: lib.rs
crates/server/: .env.example  Cargo.toml  docker-compose.yml  justfile
crates/server/migrations/: 20241006174524_init.sql
crates/server/src/: api.rs  app_state.rs  dto.rs  dtos.rs  lib.rs  main.rs  router.rs  routes.rs  state.rs
crates/server/src/api/: routes.rs
crates/server/src/api/dtos/: share_dto.rs
crates/server/src/api/routes/: shares.rs
crates/server/src/dto/: error_object.rs
crates/server/src/dtos/: error_object.rs  share_dto.rs
crates/server/src/model/: share.rs
crates/server/src/router/: shares.rs
crates/server/src/routes/: shares.rs
crates/server/src/services/: share.rs  shares.rs
crates/server/src/tasks/: cleanup.rs
crates/web/: Cargo.toml  README.md  justfile
crates/web/frontend/: .gitignore  biome.json  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
crates/web/frontend/src/app/: 404.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page-utils.ts  page.module.css  page.tsx
crates/web/frontend/src/components/: RustComponent.tsx
crates/web/frontend/src/components/action-button/: action-button.tsx  actionButton.tsx
crates/web/frontend/src/components/apply-button/: apply-button.tsx
crates/web/frontend/src/components/apply-query-button/: apply-query-button.tsx
crates/web/frontend/src/components/apply-template-button/: apply-template-button.tsx
crates/web/frontend/src/components/body-popup/: body-popup.tsx
crates/web/frontend/src/components/body-tab/: body-tab.tsx
crates/web/frontend/src/components/docs-button/: docs-button.tsx
crates/web/frontend/src/components/dump-block/: dump-block.tsx
crates/web/frontend/src/components/editor/: editor-completions.ts  editor-console.tsx  editor-error-overlay.tsx  editor-loading-overlay.tsx  editor-menu.tsx  editor-title.tsx  editor-too-large.tsx  editor-utils.ts  editor.module.css  editor.tsx  simple-editor.tsx  url-plugin.ts
crates/web/frontend/src/components/editor-console/: editor-console.module.css  editor-console.tsx
crates/web/frontend/src/components/editor-overlay/: editor-error-overlay.tsx  editor-loading-overlay.tsx  editor-overlay.module.css
crates/web/frontend/src/components/examples-sheet/: examples-sheet.module.css  examples-sheet.tsx  examples.ts
crates/web/frontend/src/components/examples-tab/: examples-tab.tsx  examples.ts
crates/web/frontend/src/components/export-button/: export-button.tsx
crates/web/frontend/src/components/export-popover/: export-popover.tsx
crates/web/frontend/src/components/export-popup/: export-popup.tsx
crates/web/frontend/src/components/footer/: footer.tsx
crates/web/frontend/src/components/header/: header.module.css  header.tsx  star-count.tsx
crates/web/frontend/src/components/headers-datalist/: headers-datalist.tsx
crates/web/frontend/src/components/headers-popup/: headers-popup.tsx  headers.ts
crates/web/frontend/src/components/headers-tab/: headers-datalist.tsx  headers-tab.tsx
crates/web/frontend/src/components/history-tab/: history-tab-utils.ts  history-tab.tsx
crates/web/frontend/src/components/import-button/: import-button.tsx  import-utils.ts
crates/web/frontend/src/components/import-popup/: import-popup.module.css  import-popup.tsx  import-utils.ts
crates/web/frontend/src/components/left-sidebar/: left-sidebar.tsx
crates/web/frontend/src/components/link-editor/: link-editor.tsx
crates/web/frontend/src/components/onboarding-popup/: onboarding-popup.module.css  onboarding-popup.tsx
crates/web/frontend/src/components/request-body-tab/: request-body-tab.tsx
crates/web/frontend/src/hooks/: use-debounce.tsx  use-lazy-state.tsx  use-onboarding.tsx  useDebounce.tsx  useFormat.tsx  useGq.tsx  useLazyState.tsx  useWorker.tsx
crates/web/frontend/src/lib/: constants.ts  converter.ts  format.ts  gq.ts  notify.ts  theme.ts  utils.ts  worker.ts
crates/web/frontend/src/model/: completion.ts  data.ts  expiration-time.ts  file-type.ts  history-item.ts  http-method.ts  loading-state.ts  settings.ts  share.ts  user-query.ts
crates/web/frontend/src/providers/: settings-provider.tsx  worker-provider.tsx
crates/web/frontend/src/service/: share-service.ts
crates/web/frontend/src/worker/: convert.ts  format.ts  gq.ts  lsp.ts
crates/web/frontend/src/workers/: convert.ts  format.ts  gq.ts  lsp.ts
crates/web/src/: data.rs  data_type.rs  lib.rs  lsp.rs  value_type.rs
(+152 files in other folders)
