[package]
name = "gq-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gq"
path = "src/main.rs"

[dependencies]
ariadne = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse", "http-ureq"] }
gq-core = { path = "../core" }
serde_json = { workspace = true }
