[package]
name = "gq-cli"
version = "0.1.0"
description = "A CLI for the GQ project that let's you filter JSON and YAML files in many different ways"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "gq"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.83"
ariadne = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
clio = { version = "0.3.5", features = ["clap-parse", "http-ureq"] }
env_logger = "0.11.3"
gq-core = { path = "../core", version = "0.1.0" }
log.workspace = true
serde_json.workspace = true
