[package]
name = "gq-core"
version = "0.1.0"
edition = "2021"

[dependencies]
colored_json = "5.0.0"
derive-getters = "0.3.0"
derive_builder = "0.20.0"
derive_more.workspace = true
enquote = "1.1.0"
escape8259 = "0.5.3"
log.workspace = true
logos = "0.14.0"
once_cell = "1.19.0"
regex = "1.10.4"
rstest = "0.21.0"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror = "1.0.58"
unescape = "0.1.0"
