[package]
name = "gq-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gqlang"
crate-type = ["cdylib"]

[dependencies]
gq-core = { path = "../core", version = "0.1.0" }
pyo3 = "0.22.0"
serde_json.workspace = true
