[package]
name = "gq-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
gq-core = { path = "../core" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde = "1.0.197"
