[package]
name = "gq-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
gq-core = { path = "../core" }
gq-lsp = { path = "../lsp" }
serde_json.workspace = true
serde_yaml.workspace = true
serde.workspace = true
getrandom = { version = "0.2.15", features = ["js"] }
cached = { workspace = true, features = ["wasm"] }
